	  patches can be found in older releases and the source archive.
	* Add support for building rpm packages.
	* Add Tomi Manninen OH2BNS's axwrapper program.
	* Fix build issues with modern autoconf, automake and GCC.
	* For the tarball release Regenerate generates files with most
	  recent autoconf and automake.
	* axparms --assoc now also accepts a numeric user id.

 -- Ralf Baechle DL5RB <ralf@linux-mips.org>  Sat, 6 Jun 2015 14:29:07 +0200

ax25-tools (0.0.9)
	* Fix for mkiss pid problem
	* Removed inline statesment in hdrvcomm.c
	* Added remaining missing sys/time.h
	* Netromd now uses PF_SOCKET
	* Changed sys_errlist[] to strerror()

 -- Craig Small <csmall@small.dropbear.id.au>  NO RELEASE YET

ax25-tools (0.0.8)
	* kissattach now tells you where it thinks the config file is
	* rip98r metric patch form Jean-Paul
	* Fix for FTLK_LIB for configure.in from Hans
	* Works better with newer GCCs (thanks again to Hans)
	* Fixed sockaddr/osockaddr problem in ttylink
	* Changed bcopy and bzero to memcpy and memset
	* netromd was printing raw callsigns, now use ax25_ntoa()
	* synced dmascc_cfg to Klauss' latest

 -- Craig Small <csmall@small.dropbear.id.au>

ax25-tools (0.0.7)
	* Fixed automake/autoconf stuff to sort out FLTK tools.

 -- Craig Small <csmall@small.dropbear.id.au>  Thu, 26 Oct 2000 14:19:32 +1100

ax25-tools (0.0.6)
	* Added the new fltk smdiag and friends and put the old non-X based
	  ones back in.
	* Changed all references of rip98.conf to rip98d.conf
	* Attempted to hunt down and change all my email addresses
	* Another Tomi's patch for nrparms and user_call

 -- Craig Small <csmall@small.dropbear.id.au>  Tue Jan  4 15:13:15 EST 2000

ax25-tools (0.0.5)

	* Added Tomi's patch to correctly detect broken headers

 -- Craig Small <csmall@small.dropbear.id.au>  Mon, 23 Aug 1999 12:41:12 +1000

ax25-tools (0.0.4)

	* Changed kissattach so that it demands an IP address
	* The hdlc stuff now has -i in it
	* mheardd.c patch for old glibc headers